--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
     <div class="clock">
@@ -25,6 +25,6 @@
         <div class="number number11"><h3 id="no11">11</h3></div>
         <div class="number number12"><h3 id="no12">12</h3></div>
     </div>
-    <script defer src="/js/script.js"></script>
+    <script defer src="./js/script.js"></script>
 </body>
 </html>
